syntax = "proto3";

package proto;

option go_package = "/pb";

import "proto/page.proto";

import "google/api/annotations.proto";

service TagService {
  rpc GetTagList (GetTagListRequest) returns (GetTagListResponse) {
    option (google.api.http) = {
      get: "/api/v1/tags"
    };
  }
}

message Tag {
  uint64 id = 1;
  string name = 2;
  uint32 state = 3;
}

message TagList {
  repeated Tag list = 1;
  Pager pager = 2;
}

message GetTagListRequest {
  string name = 1;
  uint32 state = 2;
}

message GetTagListResponse {
  TagList details = 1;
}